# OpenTHUG

./: .gitignore  CMakeLists.txt  CMakeSettings.json  annotated.html  annotated_dup.js  classes.html  dir_0ab3d8148ad909fffca637e40294a46a.html  dir_0ab3d8148ad909fffca637e40294a46a.js  dir_0c3dcd0f414a90ef83ae973efc8fb70d.html  dir_0c3dcd0f414a90ef83ae973efc8fb70d.js  dir_0de49b7b8a92aa1e710ba049a1d6894c.html  dir_0de49b7b8a92aa1e710ba049a1d6894c.js  dir_0f6e97e13f9111976a25ab5c3a74d60e.html  dir_0f6e97e13f9111976a25ab5c3a74d60e.js  dir_0fad2c08968b9c4975075615fe29d2d6.html  dir_0fad2c08968b9c4975075615fe29d2d6.js  dir_1218b3befc525c7dd6ee70fb992d6af4.html  dir_1218b3befc525c7dd6ee70fb992d6af4.js  dir_14f6c7f207ecfc0f4e39544c99e75bcb.html  dir_14f6c7f207ecfc0f4e39544c99e75bcb.js  dir_17ac0882b9f307ce11d41f7e7c182a97.html  dir_17ac0882b9f307ce11d41f7e7c182a97.js  dir_1b148a7d7bfad617bc9069acf3b9bb40.html  dir_1b148a7d7bfad617bc9069acf3b9bb40.js  dir_1b77128637b71db1c324587f9c2cff48.html  dir_1b77128637b71db1c324587f9c2cff48.js  dir_1ca88deabc73e0e3ad9f812878d99dd8.html  dir_1ca88deabc73e0e3ad9f812878d99dd8.js  dir_1fce747d72c4872f1659f116a72fb0ff.html  dir_1fce747d72c4872f1659f116a72fb0ff.js  dir_220d2bd384b446346a1cdcf02b1b2295.html  dir_220d2bd384b446346a1cdcf02b1b2295.js  dir_22e0216aa5af23832e9cb150d79678d1.html  dir_22e0216aa5af23832e9cb150d79678d1.js  dir_279f1174da68fd68c4bfee551f129943.html  dir_279f1174da68fd68c4bfee551f129943.js  dir_2aa0b3620c38bf368798da486fae478f.html  dir_2aa0b3620c38bf368798da486fae478f.js  dir_2b331999753f2c12224c14629ccd0b16.html  dir_2b331999753f2c12224c14629ccd0b16.js  (+2056 more)
cmake/: utils.cmake
src/: CMakeLists.txt  GameFlow.txt  standard.cpp  template.cpp  template.h
src/core/: CMakeLists.txt  Defines.h  crc.cpp  crc.h  defines.h  hashtable.h  math.h  singleton.h
src/core/Math/: geometry.cpp  math.cpp  math.h  matrix.inl
src/core/debug/: module.h
src/core/math/: geometry.cpp  geometry.h  matrix.inl
src/gel/: CMakeLists.txt  Event.h  inpman.h  module.h  objtrack.h
src/gel/AssMan/: AssMan.cpp
src/gel/Components/: BouncyComponent.h  CameraComponent.cpp  CameraLookAroundComponent.h  FloatingLabelComponent.cpp  FloatingLabelComponent.h  HorseCameraComponent.cpp  HorseCameraComponent.h  HorseComponent.cpp  HorseComponent.h  InputComponent.h  ModelLightUpdateComponent.cpp  ModelLightUpdateComponent.h  MovableContactComponent.cpp  MovableContactComponent.h  NearComponent.cpp  ParticleComponent.h  PedLogicComponent.cpp  ProximTriggerComponent.cpp  RailManagerComponent.cpp  RiderComponent.h  SetDisplayMatrixComponent.cpp  SetDisplayMatrixComponent.h  SkaterCameraComponent.cpp  StatsManagerComponent.cpp  StreamComponent.cpp  SuspendComponent.h  TriggerComponent.cpp  VehicleSoundComponent.cpp  VehicleSoundComponent.h  VibrationComponent.cpp  VibrationComponent.h  WalkCameraComponent.cpp  WalkCameraComponent.h  WalkComponent.cpp  WalkComponent.h  WalkHangUtil.cpp  animationcomponent.cpp  avoidcomponent.h  carphysicscomponent.cpp  collisioncomponent.h  (+13 more)
src/gel/Environment/: terrain.h
src/gel/Movies/: Movies.cpp
src/gel/Music/: music.cpp
src/gel/Net/: net.h
src/gel/Object/: Event.cpp  basecomponent.h  objman.cpp
src/gel/Scripting/: debugger.cpp  script.cpp  scriptcache.cpp  utils.cpp
src/gel/SoundFX/: soundfx.h
src/gel/assman/: animasset.cpp
src/gel/collision/: collcache.cpp  collision.cpp
src/gel/components/: animationcomponent.h  avoidcomponent.cpp  bouncycomponent.cpp  cameralookaroundcomponent.cpp  carphysicscomponent.h  collideanddiecomponent.cpp  collideanddiecomponent.h  collisioncomponent.cpp  emptycomponent.h  gunslingercameralookaroundcomponent.cpp  gunslingerwalkcameracomponent.cpp  gunslingerwalkcomponent.cpp  inputcomponent.cpp  inputcomponent.h  objecthookmanagercomponent.cpp  particlecomponent.cpp  proximtriggercomponent.h  ribboncomponent.cpp  ridercomponent.cpp  rigidbodycomponent.h  skeletoncomponent.cpp  skitchcomponent.cpp  specialitemcomponent.cpp  specialitemcomponent.h  staticvehiclecomponent.cpp  staticvehiclecomponent.h  statsmanagercomponent.h  suspendcomponent.cpp  trickcomponent.cpp  trickcomponent.h  triggercomponent.h  vehiclecameracomponent.cpp  vehiclecomponent.h  velocitycomponent.cpp  velocitycomponent.h  walkladderutil.cpp  weaponcomponent.cpp
src/gel/environment/: terrain.cpp
src/gel/movies/: movies.cpp
src/gel/music/: music.cpp  music.h
src/gel/object/: compositeobject.cpp  object.cpp  objtrack.cpp
src/gel/scripting/: parse.cpp  scriptcache.h  skiptoken.cpp  win32functions.cpp
src/gel/soundfx/: soundfx.cpp  soundfx.h
src/gfx/: AnimController.cpp  CMakeLists.txt  CustomAnimKey.cpp  FaceMassage.cpp  FaceTexture.cpp  ModelAppearance.cpp  NxLightMan.cpp  NxModel.cpp  NxNewParticle.cpp  NxViewMan.cpp  Skeleton.cpp  baseanimcontroller.cpp  baseanimcontroller.h  blendchannel.cpp  blendchannel.h  casutils.cpp  debuggfx.cpp  gfxutils.cpp  modelbuilder.cpp  nx.cpp  nxparticle.cpp  nxscene.cpp  nxsector.cpp  nxtexman.cpp  nxtexture.cpp  skeleton.cpp  subanimcontroller.cpp
src/gfx/2D/: TextElement.cpp
src/gfx/2d/: blureffect.cpp  element3d.cpp  menu2.cpp  screenelement2.cpp  screenelemman.cpp  scrollingmenu.cpp
src/gfx/NGPS/: p_nx.cpp
src/gfx/ngc/: p_nxweather.cpp
src/gfx/ngps/: p_nxweather.cpp
src/gfx/win32/: p_gfxman.cpp  p_memview.cpp  p_nx.cpp  p_nxfont.cpp  p_nxfontman.cpp  p_nximposter.cpp  p_nxlightman.cpp  p_nxloadscreen.cpp  p_nxmiscfx.cpp  p_nxparticle.cpp  p_nxsprite.cpp  p_nxtexman.cpp  p_nxtexture.cpp  p_nxtexture.h  p_nxviewman.cpp  p_nxwin2d.cpp
src/sk/: CMakeLists.txt  Main.cpp  main.cpp
src/sk/Components/: GoalEditorComponent.cpp  ProjectileCollisionComponent.h  RailEditorComponent.cpp  RailEditorComponent.h  SkaterBalanceTrickComponent.cpp  SkaterBalanceTrickComponent.h  SkaterCleanupStateComponent.cpp  SkaterCorePhysicsComponent.cpp  SkaterEndRunComponent.h  SkaterFinalizePhysicsComponent.h  SkaterFloatingNameComponent.cpp  SkaterFloatingNameComponent.h  SkaterGapComponent.h  SkaterLocalNetLogicComponent.h  SkaterLoopingSoundComponent.h  (+13 more)
src/sys/: CMakeLists.txt
(+35549 files in other folders)
